# ose-public

./: .dockerignore  .gitignore  .golangci.yml  .markdownlint-cli2.jsonc  .markdownlintignore  .nxignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSING-NOTICE.md  README.md  ROADMAP.md  codecov.yml  go.work  go.work.sum  open-sharia-enterprise.sln  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.json
.claude/agents/: README.md  (+90 more)
.husky/: pre-commit  pre-push
.opencode/: opencode.json
apps/: README.md
apps-labs/: README.md
apps/demo-be-python-fastapi/: README.md  docker-compose.integration.yml  project.json  pyproject.toml
apps/demo-be-python-fastapi/src/demo_be_python_fastapi/: dependencies.py  main.py
apps/demo-be-python-fastapi/src/demo_be_python_fastapi/auth/: dependencies.py
apps/demo-be-python-fastapi/src/demo_be_python_fastapi/infrastructure/: models.py  protocols.py  refresh_token_repository.py
apps/demo-be-python-fastapi/src/demo_be_python_fastapi/routers/: auth.py  reports.py
apps/demo-be-python-fastapi/tests/: conftest.py
apps/demo-be-python-fastapi/tests/integration/: conftest.py  service_client.py
apps/demo-be-python-fastapi/tests/integration/steps/: admin_steps.py  attachment_steps.py  auth_steps.py  currency_steps.py  expense_steps.py  health_steps.py  reporting_steps.py  security_steps.py  token_lifecycle_steps.py  token_management_steps.py  unit_handling_steps.py  user_account_steps.py
apps/demo-be-python-fastapi/tests/unit/: conftest.py  in_memory_repos.py
apps/demo-be-python-fastapi/tests/unit/steps/: _helpers.py  admin_steps.py  attachment_steps.py  auth_steps.py  currency_steps.py  expense_steps.py  health_steps.py  reporting_steps.py  security_steps.py  token_lifecycle_steps.py  token_management_steps.py  unit_handling_steps.py  user_account_steps.py
apps/demo-be-rsax/: Cargo.toml  project.json
apps/demo-be-rsax/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
apps/demo-be-rsax/src/auth/: jwt.rs  middleware.rs  password.rs
apps/demo-be-rsax/src/db/: attachment_repo.rs  expense_repo.rs  mod.rs  pool.rs  token_repo.rs  user_repo.rs
apps/demo-be-rsax/src/db/migrations/: 001_users.sql  002_token_revocations.sql  003_expenses.sql  004_attachments.sql
apps/demo-be-rsax/src/domain/: attachment.rs  errors.rs  expense.rs  mod.rs  types.rs  user.rs
apps/demo-be-rsax/src/handlers/: admin.rs  attachment.rs  auth.rs  expense.rs  health.rs  mod.rs  report.rs  token.rs  user.rs
apps/demo-be-rsax/tests/integration/: main.rs  world.rs
apps/demo-be-rsax/tests/integration/steps/: admin_steps.rs  attachment_steps.rs  auth_steps.rs  common_steps.rs  currency_steps.rs  expense_steps.rs  mod.rs  reporting_steps.rs  security_steps.rs  token_lifecycle_steps.rs  token_management_steps.rs  unit_handling_steps.rs  user_account_steps.rs
apps/demo-be-rust-axum/: Cargo.toml  README.md  project.json
apps/demo-be-rust-axum/src/: lib.rs  state.rs
apps/demo-be-rust-axum/src/auth/: middleware.rs
apps/demo-be-rust-axum/src/db/: expense_repo.rs  refresh_token_repo.rs  user_repo.rs
apps/demo-be-rust-axum/src/db/migrations/: 001_users.sql  002_refresh_tokens.sql  003_revoked_tokens.sql  004_expenses.sql  005_attachments.sql
apps/demo-be-rust-axum/src/domain/: expense.rs  types.rs
apps/demo-be-rust-axum/src/handlers/: admin.rs  attachment.rs  auth.rs  expense.rs  report.rs  token.rs  user.rs
apps/demo-be-rust-axum/src/repositories/: mod.rs  sqlx_attachment_repo.rs  sqlx_expense_repo.rs  sqlx_refresh_token_repo.rs  sqlx_token_repo.rs  sqlx_user_repo.rs
apps/demo-be-rust-axum/tests/integration/: main.rs  world.rs
apps/demo-be-rust-axum/tests/integration/steps/: reporting_steps.rs
apps/demo-be-rust-axum/tests/unit/: in_memory_repos.rs  main.rs  world.rs
apps/demo-be-rust-axum/tests/unit/steps/: admin_steps.rs  reporting_steps.rs
generated-reports/: parity__phase7-strengthened__2026-04-18--22-10__report.md  parity__phase7__2026-04-18--20-35__report.md  repo-ose-primer-adoption-maker__db078e__2026-04-19--00-56__report.md
generated-socials/: 2026-03-01__linkedin__ose-update-week-0015.md  2026-03-08__linkedin__ose-update-week-0016.md  2026-03-22__linkedin__ose-update-week-0018.md  2026-04-05__linkedin__ose-update-week-0020.md
governance/: README.md  repository-governance-architecture.md
plans/: ideas.md
scripts/: clean-generated-java-imports.sh  format-clojure.sh  format-csharp.sh  format-dart.sh  format-elixir.sh
specs/: README.md
(+4004 files in other folders)
