[package]
name = "demo-be-rust-axum"
version = "0.1.0"
edition = "2021"

[[test]]
name = "unit"
path = "tests/unit/main.rs"
harness = false

[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = false

[dependencies]
demo-contracts = { path = "generated-contracts" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "any",
    "uuid",
    "chrono",
    "migrate",
] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
http = "1"
http-body-util = "0.1"

[dev-dependencies]
cucumber = { version = "0.21", features = ["libtest"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
